--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"  
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.4",
@@ -18,6 +18,10 @@
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-modal": "^3.16.3",
+    "react-multi-carousel": "^2.8.6",
+    "react-router-dom": "^7.5.1",
+    "react-youtube": "^10.1.0",
     "tailwindcss": "^4.1.4"
   },
   "devDependencies": {
